# axum-nextjs-auth

./: README.md  Taskfile.yml  compose.yml
.github/workflows/: ci_server.yml  cii_front.yml  rust.yml
front/: package-lock.json  package.json  pnpm-lock.yaml
front/src/: env.ts  error.ts
front/src/app/: layout.tsx  page.tsx
front/src/app/users/: page.tsx
front/src/app/users/[id]/: page.tsx
front/src/types/: utils.ts
server/: Cargo.toml
server/migrations/: 20250323225103_user.sql
server/src/crates/application/: Cargo.toml
server/src/crates/application/src/: lib.rs  request_response.rs  usecase.rs
server/src/crates/application/src/request_response/: create_user_request.rs  create_user_response.rs  find_all_user_response.rs  find_user_by_id_request.rs  find_user_by_id_response.rs
server/src/crates/application/src/usecase/: create_user.rs  find_all_user.rs  find_user_by_id.rs
server/src/crates/domain/: Cargo.toml
server/src/crates/domain/src/: entity.rs  interface.rs  lib.rs
server/src/crates/domain/src/entity/: user.rs
server/src/crates/domain/src/entity/value_object/: user_id.rs
server/src/crates/domain/src/error/: user_error.rs
server/src/crates/domain/src/interface/: user_email_duplicate_validator_interface.rs  user_repository_interface.rs
server/src/crates/infrastructure/: Cargo.toml
server/src/crates/infrastructure/src/: repository.rs
server/src/crates/infrastructure/src/model/: user_model.rs
server/src/crates/infrastructure/src/repository/: user_email_duplicate_validator_with_pg.rs  user_repository_with_pg.rs
server/src/crates/main/: Cargo.toml
server/src/crates/main/src/: app.rs  config.rs  handler.rs
server/src/crates/main/src/config/: connect.rs  problem_type.rs
server/src/crates/usecase/: Cargo.toml
server/src/crates/usecase/src/: create_user.rs
