[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
dotenv.workspace = true
problemdetails.workspace = true
axum.workspace = true
validator.workspace = true
domain = { path = "../domain" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }