[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
serde.workspace = true
# serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower.workspace = true
anyhow.workspace = true
sqlx.workspace = true
dotenv.workspace = true
serde_json.workspace = true
axum-valid.workspace = true
validator.workspace = true

[dev-dependencies]
uuid.workspace = true
